fixed cover photo so that Andrea nor Kail gets cut off on phones

--- a/css/default.css
+++ b/css/default.css
@@ -57,8 +57,9 @@ a {
     text-align: center;
     font-family: 'Arizonia';
     font-weight: bold;
-    background:#fff url(../img/EngagementPhotos-31.jpg) no-repeat fixed center;
+    background:#fff url(../img/EngagementPhotos-31.jpg) no-repeat center;
     background-size: cover;
+    background-position: 29% 50%;
     padding-top: 299px;
     padding-bottom: 0px;
 }
